--- a/trunk/intro/index.html
+++ b/trunk/intro/index.html
@@ -8,7 +8,7 @@
 <body>
     <div id="contents">
 
-<h1 id="toc1">Vim 脚本 文档中文计划</h1>
+<h1 id="toc_1">Vim 脚本 文档中文计划</h1>
 <ol>
 <li>
 <a href="script_8.VimBuddy.html">VimBuddy (#8)</a>
