--- a/trunk/intro/script_1218.NERD_commenter.html
+++ b/trunk/intro/script_1218.NERD_commenter.html
@@ -8,7 +8,7 @@
 <body>
     <div id="contents">
 
-<h1 id="toc1">[http://www.vim.org/scripts/script.php?script_id=1218 The NERD Commenter: 一个简化代码注释的插件，支持多种文件类型]</h1>
+<h1 id="toc_1"><a href="http://www.vim.org/scripts/script.php?script_id=1218">The NERD Commenter: 一个简化代码注释的插件，支持多种文件类型</a></h1>
 
 <p>
 作者：<a href="http://www.vim.org/account/profile.php?user_id=7006">Marty Grenfell</a>
@@ -18,7 +18,7 @@
 脚本类型：公用(utility)
 </p>
 
-<h2 id="toc2">描述</h2>
+<h2 id="toc_1.1">描述</h2>
 <p>
 从这里获取最新的开发版本 <a href="https://github.com/scrooloose/nerdcommenter">https://github.com/scrooloose/nerdcommenter</a>
 </p>
@@ -97,7 +97,7 @@ Comments the given lines using only one set of multipart delimiters if possible.
 
 <p>
 ,ca |NERDComAltDelim|
-如果当前文件类型支持多种注释符，则使用该命令来切换使用不同的注释符（如Javascript支持单行注释“//”和多行注释“/<strong> </strong>/”）。
+如果当前文件类型支持多种注释符，则使用该命令来切换使用不同的注释符（如Javascript支持单行注释“//”和多行注释“/* */”）。
 </p>
 
 <p>
@@ -115,7 +115,7 @@ Comments the given lines using only one set of multipart delimiters if possible.
 abaqus abc acedb ada ahdl amiga aml ampl ant apache apachestyle asm68k asm asn aspvbs atlas autohotkey autoit automake ave awk basic b bc bdf bib bindzone bst btm caos catalog c cfg cg ch changelog cl clean clipper cmake conf config context cpp crontab cs csc csp css cterm cupl csv cvs dcl debchangelog debcontrol debsources def diff django docbk dns dosbatch dosini dot dracula dsl dtd dtml dylan ecd eiffel elf elmfilt erlang eruby eterm expect exports fetchmail fgl focexec form fortran foxpro fstab fvwm fx gdb gdmo geek gentoo-package-keywords' gentoo-package-mask' gentoo-package-use' gnuplot gtkrc haskell hb h help hercules hog html htmldjango htmlos ia64 icon idlang idl indent inform inittab ishd iss ist jam java javascript jess jgraph jproperties jproperties jsp kconfig kix kscript lace lex lftp lifelines lilo lisp lite lotos lout lprolog lscript lss lua lynx m4 mail make maple masm master matlab mel mf mib mma model moduala. modula2 modula3 monk mush muttrc named nasm nastran natural ncf netdict netrw nqc nroff nsis ocaml occam omlet omnimark openroad opl ora otl ox pascal passwd pcap pccts perl pfmain php phtml pic pike pilrc pine plaintex plm plsql po postscr pov povini ppd ppwiz procmail progress prolog psf ptcap python python qf radiance ratpoison r rc readline rebol registry remind rexx robots rpl rtf ruby sa samba sas sather scheme scilab screen scsh sdl sed selectbuf sgml sgmldecl sgmllnx sicad simula sinda skill slang sl slrnrc sm smarty smil smith sml snnsnet snnspat snnsres snobol4 spec specman spice sql sqlforms sqlj sqr squid st stp strace svn systemverilog tads taglist tags tak tasm tcl terminfo tex text plaintex texinfo texmf tf tidy tli trasys tsalt tsscl tssgm uc uil vb verilog verilog_systemverilog vgrindefs vhdl vim viminfo virata vo_base vrml vsejcl webmacro wget winbatch wml [^w]*sh wvdial xdefaults xf86conf xhtml xkb xmath xml xmodmap xpm2 xpm xslt yacc yaml z8a
 </p>
 
-<h2 id="toc3">安装细节</h2>
+<h2 id="toc_1.2">安装细节</h2>
 
 <p>
 注意：在2.0.0版中，已将脚本和帮助文件重命名为 NERD_commenter.vim 和 NERD_commenter.txt。如果您从小于 2.0.0 的版本升级到版本号大于 2.0.0 时，必须删除旧的 NERD_comments.vim 和 NERD_comments.txt 文件。
