--- a/trunk/intro/script_2150.CSS_Color_Preview.html
+++ b/trunk/intro/script_2150.CSS_Color_Preview.html
@@ -8,7 +8,7 @@
 <body>
     <div id="contents">
 
-<h1 id="toc1">[http://www.vim.org/scripts/script.php?script_id=2150 css_color.vim : CSS 颜色预览]</h1>
+<h1 id="toc_1"><a href="http://www.vim.org/scripts/script.php?script_id=2150">css_color.vim : CSS 颜色预览</a></h1>
 
 <p>
 作者：<a href="http://www.vim.org/account/profile.php?user_id=13888">Niklas Hofer</a>
@@ -18,7 +18,7 @@
 脚本类型：语法(syntax)
 </p>
 
-<h2 id="toc2">描述</h2>
+<h2 id="toc_1.1">描述</h2>
 <p>
 这个脚本使用实际的颜色来衬垫CSS的十六进制颜色代码。并且使用恰当的前景色（文本颜色）。所以 #FF0000 会看起来像火一样。
 </p>
@@ -28,7 +28,7 @@
 <img src="http://lanpartei.de/~niklas/vim/after/syntax/css-color-vim.png" />
 </p>
 
-<h2 id="toc3">安装细节</h2>
+<h2 id="toc_1.2">安装细节</h2>
 
 <p>
 将 css.vim 下载并放至 .vim/after/syntax/css.vim 即可。
