--- a/trunk/intro/script_2204.TwitVim.html
+++ b/trunk/intro/script_2204.TwitVim.html
@@ -8,7 +8,7 @@
 <body>
     <div id="contents">
 
-<h1 id="toc1">[http://www.vim.org/scripts/script.php?script_id=2204 TwitVim : Vim 的 Twitter 客户端]</h1>
+<h1 id="toc_1"><a href="http://www.vim.org/scripts/script.php?script_id=2204">TwitVim : Vim 的 Twitter 客户端</a></h1>
 
 <p>
 作者：<a href="http://www.vim.org/account/profile.php?user_id=8120">Po Shan Cheah</a>
@@ -18,7 +18,7 @@
 脚本类型：公用(utility)
 </p>
 
-<h2 id="toc2">描述</h2>
+<h2 id="toc_1.1">描述</h2>
 <p>
 TwitVim 是一个 Vim 插件，让你可以在 Vim 中发推或者查看好友的推，
 这个插件是基于 Travis Jeffery 开发的 <a href="http://www.vim.org/scripts/script.php?script_id=2124">vimscript#2124</a> 的增强版。
@@ -62,7 +62,7 @@ TwitVim 使用 cURL 来跟 Twitter 通信，或者，也可以配置 TwitVim
 来使用 Vim 的 Perl, Python, Ruby 或者 Tcl 接口这些更快的网络读写方式。
 </p>
 
-<h2 id="toc3">用法</h2>
+<h2 id="toc_1.2">用法</h2>
 <p>
 <code>:PosttoTwitter</code> - 这个命令将提示你输入一条消息，来发送到 Twitter。
 <code>:CPosttoTwitter</code> - 这个命令直接发送当前缓冲区当前行的内容到 Twitter。
@@ -116,7 +116,7 @@ Twitter 上 follow 我 <a href="https://twitter.com/mortonfox">@mortonfox</a>
 </p>
 
 
-<h2 id="toc4">安装细节</h2>
+<h2 id="toc_1.3">安装细节</h2>
 <p>
 新版都是使用 Vimball 档，打开 vba 文件并引用(:source)即可。
 </p>
@@ -165,7 +165,7 @@ let twitvim_proxy = "proxyhost:proxyport"
 修改 proxyhost 和 proxyport 为你的代理服务器地址和端口号。
 </p>
 
-<h2 id="toc5">技巧</h2>
+<h2 id="toc_1.4">技巧</h2>
 <p>
 TwitVim 支持第三方 API，在 vimrc 中设置：
 </p>
