--- a/trunk/intro/script_2540.snipMate.html
+++ b/trunk/intro/script_2540.snipMate.html
@@ -8,7 +8,7 @@
 <body>
     <div id="contents">
 
-<h1 id="toc1">[http://www.vim.org/scripts/script.php?script_id=2540 snipMate : Vim 中 TextMate 风格的片段补全]</h1>
+<h1 id="toc_1"><a href="http://www.vim.org/scripts/script.php?script_id=2540">snipMate : Vim 中 TextMate 风格的片段补全</a></h1>
 
 <p>
 作者：<a href="http://www.vim.org/account/profile.php?user_id=16544">Michael Sanders</a>
@@ -18,7 +18,7 @@
 脚本类型：公用(utility)
 </p>
 
-<h2 id="toc2">描述</h2>
+<h2 id="toc_1.1">描述</h2>
 <p>
 snipMate.vim 的目标是实现 TextMate 片段特性的一个低调，简洁的 Vim 脚本，
 片段内容是一种经常输入的文字，你可以在文档中插入关键的触发字，并按 &lt;Tab&gt; 键。
@@ -79,7 +79,7 @@ snipMate.vim 其他的一些特性：
 玩的愉快！
 </p>
 
-<h2 id="toc3">安装细节</h2>
+<h2 id="toc_1.2">安装细节</h2>
 <p>
 解压缩 snipMate.zip 文件到 ~/.vim (Windows 下是 $HOME\vimfiles)
 </p>
@@ -90,6 +90,13 @@ unzip snipMate.zip -d ~/.vim
 注意，这将覆盖已有文件，包括旧版的 snipMate，和默认的 *.snippets 类型文件。
 如果不希望被覆盖，重命名即可，如 c-mysnips.snippets。
 </p>
+
+<h2 id="toc_1.3">资源</h2>
+<ol>
+<li>
+<a href="http://vim-script-cn.googlecode.com/svn/trunk/doc/snipMate.cnx">中文帮助文档</a>
+</li>
+</ol>
     </div>
     <div id="footer">
         Copyleft &copy; 2009-2010 <a href="http://code.google.com/p/vim-script-cn/">Vim Script 文档中文团队</a>.
