--- a/trunk/intro/script_2801.NERD_tree_Project.html
+++ b/trunk/intro/script_2801.NERD_tree_Project.html
@@ -8,7 +8,7 @@
 <body>
     <div id="contents">
 
-<h1 id="toc1">[http://www.vim.org/scripts/script.php?script_id=2801 NERD_tree Project : 尝试查找项目根目录，并使用 NERD_tree 浏览项目]</h1>
+<h1 id="toc_1"><a href="http://www.vim.org/scripts/script.php?script_id=2801">NERD_tree Project : 尝试查找项目根目录，并使用 NERD_tree 浏览项目</a></h1>
 
 <p>
 作者：<a href="http://www.vim.org/account/profile.php?user_id=18141">Janlay Wu</a>
@@ -18,7 +18,7 @@
 脚本类型：公用(utility)
 </p>
 
-<h2 id="toc2">描述</h2>
+<h2 id="toc_1.1">描述</h2>
 <p>
 这个插件协同 NERD_tree ( <a href="http://www.vim.org/scripts/script.php?script_id=1658">http://www.vim.org/scripts/script.php?script_id=1658</a> ) 一起工作，它尝试找出项目根目录，并在当前目录调用 NERD_tree。
 这个插件是如何工作的
@@ -34,7 +34,7 @@
 如果发现其中任何一个，便认为这是项目根所在目录。命令 ToggleNERDTree 将打开这个根目录，这样就保证你在正确的项目是工作。 如果未找到项目根目录， NERD_tree 将打开当前目录。
 </p>
 
-<h2 id="toc3">用法</h2>
+<h2 id="toc_1.2">用法</h2>
 
 <p>
 在 normal 模式下输入：
@@ -48,7 +48,7 @@
 <pre>
 map &lt;F8&gt; :ToggleNERDTree&lt;CR&gt;
 </pre>
-<h2 id="toc4">自定义</h2>
+<h2 id="toc_1.3">自定义</h2>
 
 <p>
 让 NERD_tree 去辨认更多的项目，就像scons(?)：
@@ -62,7 +62,7 @@ let g:NTPNames = add(g:NTPNames, 'SConstruct')
 <pre>
 extend(g:NTPNames, ['*.sln', '*.csproj'])
 </pre>
-<h2 id="toc5">安装细节</h2>
+<h2 id="toc_1.4">安装细节</h2>
 
 <p>
 首先，确保 NERD_tree 被正确安装。
