--- a/trunk/intro/script_52.Calendar.html
+++ b/trunk/intro/script_52.Calendar.html
@@ -8,7 +8,7 @@
 <body>
     <div id="contents">
 
-<h1 id="toc1">[http://www.vim.org/scripts/script.php?script_id=52 Calendar]</h1>
+<h1 id="toc_1"><a href="http://www.vim.org/scripts/script.php?script_id=52">Calendar</a></h1>
 
 <p>
 作者：<a href="http://www.vim.org/account/profile.php?user_id=130">Yasuhiro Matsumoto</a>
@@ -18,23 +18,23 @@
 脚本类型：公用(utility)
 </p>
 
-<h2 id="toc2">描述</h2>
+<h2 id="toc_1.1">描述</h2>
 <p>
 这个脚本创建日历窗口，它不使用外部日历程序。
 </p>
 
-<h2 id="toc3">安装细节</h2>
+<h2 id="toc_1.2">安装细节</h2>
 <p>
 复制 calendar.vim 到 plugin （Windows: $VIM\vimfiles\plugin\）目录即可。
 </p>
 
-<h2 id="toc4">备注</h2>
+<h2 id="toc_1.3">备注</h2>
 <p>
 如果安装了 <a href="script_2226.Vimwiki.html">Vimwiki (#2226)</a>，会修改日历的默认存储路径为
 <code>g:vimwiki_list</code> 中第一个Wiki，日记会存储到这个目录下的 diary 中。
 </p>
 
-<h2 id="toc5">资源</h2>
+<h2 id="toc_1.4">资源</h2>
 <ol>
 <li>
 <a href="http://www.gracecode.com/archives/674/">推荐使用 Vim Calendar 插件</a>
